refactor: Replace Paths.get with Path.of
See: https://docs.openrewrite.org/recipes/java/migrate/nio/file/pathsgettopathof